--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "softeer-test-pad-prototype",
-  "private": true,
   "version": "0.0.0",
   "type": "module",
   "browserslist": {
@@ -16,17 +15,32 @@
     ]
   },
   "scripts": {
-    "start": "vite -c ./config/vite.config.js --open",
-    "build": "tsc && vite build -c ./config/vite.config.js",
-    "preview": "vite preview -c ./config/vite.config.js"
+    "start": "vite -c ./config/vite.config.ts --open",
+    "build": "tsc && vite build -c ./config/vite.config.ts",
+    "preview": "vite preview -c ./config/vite.config.ts",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "pretendard": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "reset-css": "^5.0.1"
+    "react-query": "^3.39.3",
+    "reset-css": "^5.0.1",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-vite": "^0.4.2",
+    "@storybook/builder-webpack4": "^6.5.16",
+    "@storybook/manager-webpack4": "^6.5.16",
+    "@storybook/react": "^6.5.16",
+    "@storybook/testing-library": "^0.0.13",
+    "@supercharge/strings": "^2.0.0",
     "@types/node": "^18.14.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -34,14 +48,17 @@
     "@typescript-eslint/parser": "^5.54.0",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
+    "babel-loader": "^8.3.0",
+    "classnames": "^2.3.2",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
+    "immer": "^9.0.19",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "sass": "^1.58.3",
