--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "softeer-test-pad-prototype",
   "version": "0.0.0",
   "type": "module",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "browserslist": {
     "development": [
       "last 2 versions",
@@ -14,12 +18,18 @@
       "not ie 6-11"
     ]
   },
-  "scripts": {
+  "__scripts": {
     "start": "vite -c ./config/vite.config.ts --open",
     "build": "tsc && vite build -c ./config/vite.config.ts",
     "preview": "vite preview -c ./config/vite.config.ts",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
+  },
+  "scripts": {
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "dependencies": {
     "pretendard": "^1.3.6",
@@ -31,16 +41,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-vite": "^0.4.2",
-    "@storybook/builder-webpack4": "^6.5.16",
-    "@storybook/manager-webpack4": "^6.5.16",
-    "@storybook/react": "^6.5.16",
-    "@storybook/testing-library": "^0.0.13",
-    "@supercharge/strings": "^2.0.0",
     "@types/node": "^18.14.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -69,5 +69,14 @@
     "typescript": "*",
     "vite": "^4.1.0",
     "vite-plugin-svgr": "^2.4.0"
-  }
+  },
+  "__devDependencies": {
+    "eslint-config-custom": "*",
+    "prettier": "latest",
+    "turbo": "latest"
+  },
+  "__engines": {
+    "node": ">=14.0.0"
+  },
+  "packageManager": "yarn@3.4.1"
 }
